--- a/core/src/main/res/drawable/ic_action_arrow_down.xml
+++ b/core/src/main/res/drawable/ic_action_arrow_down.xml
@@ -1,10 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/xui_menu_icon_width"
     android:height="@dimen/xui_menu_icon_width"
+    android:alpha="@integer/icon_alpha"
     android:tint="@color/iconColorOnSurface"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="?attr/colorOnPrimary"
+        android:fillColor="#FF000000"
         android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z" />
 </vector>
