--- a/core/src/main/res/layout/data_table.xml
+++ b/core/src/main/res/layout/data_table.xml
@@ -115,15 +115,16 @@
         android:id="@+id/table"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:column_header_height="@dimen/xui_data_table_column_header_height"
+        app:column_header_height="@dimen/xui_data_table_corner_view_dimen"
         app:layout_constraintBottom_toTopOf="@id/footer_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header_container"
-        app:row_header_width="@dimen/xui_data_table_row_header_width"
-        app:selected_color="@color/selected_background_color"
-        app:shadow_color="@color/shadow_background_color"
-        app:unselected_color="@color/unselected_background_color" />
+        app:row_header_width="@dimen/xui_data_table_corner_view_dimen"
+        app:selected_color="?attr/colorControlHighlight"
+        app:separator_color="?attr/colorOnSurface"
+        app:shadow_color="?attr/colorControlHighlight"
+        app:unselected_color="?attr/colorSurface" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/footer_container"
@@ -175,7 +176,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/footer"
             app:layout_constraintTop_toTopOf="@id/footer"
-            app:srcCompat="@drawable/ic_action_more_right" />
+            app:srcCompat="@drawable/ic_action_next" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
