--- a/core/src/main/res/layout/data_table_column_header.xml
+++ b/core/src/main/res/layout/data_table_column_header.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/xui_data_table_cell_height"
-    android:background="@color/unselected_header_background_color"
+    android:layout_height="wrap_content"
+    android:background="?attr/colorSurface"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/xui_data_table_cell_padding">
 
         <TextView
             android:id="@+id/data"
@@ -23,20 +23,18 @@
             android:layout_gravity="center"
             android:layout_weight="4"
             android:gravity="center"
-            android:textColor="@color/unselected_text_color"
+            android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/xui_data_table_default_text_size"
             android:textStyle="bold"
             tools:text="Header Data" />
 
         <ImageButton
             android:id="@+id/sort"
-            android:layout_width="15dp"
+            android:layout_width="@dimen/xui_data_table_sort_button_width"
             android:layout_height="match_parent"
             android:layout_gravity="end|center"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="@dimen/xui_data_table_sort_button_start_margin"
+            android:layout_marginLeft="@dimen/xui_data_table_sort_button_start_margin"
             android:background="@android:color/transparent"
             android:contentDescription="@string/xui_content_desc_sort"
             android:scaleType="fitXY"
@@ -45,9 +43,21 @@
             tools:ignore="RtlSymmetry" />
     </LinearLayout>
 
+    <!-- Top divider -->
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_gravity="bottom"
-        android:background="@color/separator_color" />
-</FrameLayout>
+        android:layout_width="0dp"
+        android:layout_height="@dimen/xui_table_divider_thickness"
+        android:background="?attr/colorOnSurface"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Bottom divider -->
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/xui_data_table_divider_thickness"
+        android:background="?attr/colorOnSurface"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
