--- a/core/src/main/res/layout/data_table.xml
+++ b/core/src/main/res/layout/data_table.xml
@@ -10,7 +10,6 @@
         android:id="@+id/header_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@id/table"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,9 +18,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/page_size_container"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/xui_data_table_cell_padding"
+            android:layout_marginLeft="@dimen/xui_data_table_cell_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/page_container"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +29,14 @@
             <TextView
                 android:id="@+id/page_size_prefix"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:gravity="center_vertical|start"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:text="@string/xui_data_table_show"
+                android:textAlignment="gravity"
+                android:textSize="@dimen/xui_data_table_header_footer_text_size"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/page_size"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +45,7 @@
             <Spinner
                 android:id="@+id/page_size"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:entries="@array/data_table_entries"
                 app:layout_constraintBottom_toBottomOf="@id/page_size_prefix"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,23 +57,22 @@
             android:id="@+id/page_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingLeft="16dp"
             app:layout_constraintBottom_toBottomOf="@id/page_size_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/page_size_container"
-            app:layout_constraintTop_toTopOf="@id/page_size_container"
-            tools:ignore="RtlSymmetry">
+            app:layout_constraintTop_toTopOf="@id/page_size_container">
 
             <TextView
                 android:id="@+id/page_prefix"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="end"
+                android:layout_height="0dp"
+                android:gravity="end|center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:text="@string/xui_data_table_goto_page"
                 android:textAlignment="textEnd"
+                android:textSize="@dimen/xui_data_table_header_footer_text_size"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/page"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,16 +80,15 @@
 
             <EditText
                 android:id="@+id/page"
-                android:layout_width="55dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:gravity="center"
                 android:hint="@string/xui_zero"
                 android:imeOptions="actionGo"
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLines="1"
+                android:padding="@dimen/xui_data_table_cell_padding"
                 android:singleLine="true"
                 android:textAlignment="gravity"
                 app:layout_constraintBottom_toBottomOf="@id/page_prefix"
@@ -97,7 +98,7 @@
 
             <ImageButton
                 android:id="@+id/submit_page"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/xui_data_table_header_footer_icons_height"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@color/colorTransparent"
@@ -115,12 +116,12 @@
         android:id="@+id/table"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:column_header_height="@dimen/xui_data_table_corner_view_dimen"
+        app:column_header_height="@dimen/xui_data_table_column_header_height"
         app:layout_constraintBottom_toTopOf="@id/footer_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header_container"
-        app:row_header_width="@dimen/xui_data_table_corner_view_dimen"
+        app:row_header_width="@dimen/xui_data_table_row_header_width"
         app:selected_color="?attr/colorControlHighlight"
         app:separator_color="?attr/colorOnSurface"
         app:shadow_color="?attr/colorControlHighlight"
@@ -139,7 +140,7 @@
         <ImageButton
             android:id="@+id/previous"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/xui_menu_icon_width"
+            android:layout_height="@dimen/xui_data_table_header_footer_icons_height"
             android:adjustViewBounds="true"
             android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_previous"
@@ -153,10 +154,12 @@
         <TextView
             android:id="@+id/footer"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_height="0dp"
+            android:gravity="center_horizontal|center_vertical"
             android:text="@string/xui_data_table_shown_entries"
-            android:textAlignment="center"
+            android:textAlignment="gravity"
+            android:textSize="@dimen/xui_data_table_header_footer_text_size"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/previous"
             app:layout_constraintEnd_toStartOf="@id/next"
             app:layout_constraintStart_toEndOf="@id/previous"
@@ -166,7 +169,7 @@
         <ImageButton
             android:id="@+id/next"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/xui_menu_icon_width"
+            android:layout_height="@dimen/xui_data_table_header_footer_icons_height"
             android:adjustViewBounds="true"
             android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_next"
