--- a/core/src/main/res/drawable/ic_action_add.xml
+++ b/core/src/main/res/drawable/ic_action_add.xml
@@ -2,7 +2,7 @@
     android:width="24dp"
     android:height="24dp"
     android:alpha="@integer/icon_alpha"
-    android:tint="@color/iconColorOnSurface"
+    android:tint="?attr/colorControlNormal"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
