--- a/core/src/main/res/drawable/ic_action_arrow_up.xml
+++ b/core/src/main/res/drawable/ic_action_arrow_up.xml
@@ -2,10 +2,10 @@
     android:width="@dimen/xui_menu_icon_width"
     android:height="@dimen/xui_menu_icon_width"
     android:alpha="@integer/icon_alpha"
-    android:tint="@color/iconColorOnSurface"
+    android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="?attr/colorOnPrimary"
+        android:fillColor="#FF000000"
         android:pathData="M4,12l1.41,1.41L11,7.83V20h2V7.83l5.58,5.59L20,12l-8,-8 -8,8z" />
 </vector>
