Update TableView dependencies

--- a/core/src/main/res/layout/data_table.xml
+++ b/core/src/main/res/layout/data_table.xml
@@ -82,6 +82,7 @@
                 android:id="@+id/page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:cursorVisible="false"
                 android:gravity="center"
                 android:hint="@string/xui_zero"
                 android:imeOptions="actionGo"
@@ -89,6 +90,7 @@
                 android:inputType="number"
                 android:maxLines="1"
                 android:padding="@dimen/xui_data_table_cell_padding"
+                android:selectAllOnFocus="true"
                 android:singleLine="true"
                 android:textAlignment="gravity"
                 app:layout_constraintBottom_toBottomOf="@id/page_prefix"
@@ -104,6 +106,7 @@
                 android:background="@color/colorTransparent"
                 android:contentDescription="@string/xui_data_table_goto_page"
                 android:scaleType="fitXY"
+                android:src="@drawable/ic_action_forward"
                 app:layout_constraintBottom_toBottomOf="@id/page"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/page"
@@ -145,6 +148,7 @@
             android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_previous"
             android:scaleType="fitXY"
+            android:src="@drawable/ic_action_previous"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/footer"
             app:layout_constraintStart_toStartOf="parent"
@@ -174,6 +178,7 @@
             android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_next"
             android:scaleType="fitXY"
+            android:src="@drawable/ic_action_next"
             android:text="@string/xui_data_table_button_next"
             app:layout_constraintBottom_toBottomOf="@id/footer"
             app:layout_constraintEnd_toEndOf="parent"
