--- a/core/src/main/res/layout/list_fragment.xml
+++ b/core/src/main/res/layout/list_fragment.xml
@@ -47,7 +47,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/xui_text_empty_list"
                     android:textAlignment="center"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/xui_no_records_text_size" />
 
                 <ImageButton
                     android:id="@+id/retry"
