--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="xui_data_table_goto_page_text_size">13sp</dimen>
     <dimen name="xui_data_table_header_footer_icons_height">30dp</dimen>
     <dimen name="xui_data_table_header_footer_text_size">16sp</dimen>
+    <dimen name="xui_no_records_text_size">18sp</dimen>
 </resources>
