--- a/core/src/main/res/layout/data_table_fragment.xml
+++ b/core/src/main/res/layout/data_table_fragment.xml
@@ -40,7 +40,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/xui_text_empty_list"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="@dimen/xui_no_data_text_size" />
 
             <ImageButton
                 android:id="@+id/retry"
