--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="xui_data_table_header_footer_icons_height">30dp</dimen>
     <dimen name="xui_data_table_header_footer_text_size">16sp</dimen>
     <dimen name="xui_no_data_text_size">18sp</dimen>
+    <dimen name="footer_views_container_padding">8dp</dimen>
 </resources>
