--- a/app/src/main/res/layout/employee_list_item.xml
+++ b/app/src/main/res/layout/employee_list_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:padding="4dp">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
             android:layout_width="50dp"
             android:layout_height="50dp"
