--- a/core/src/main/res/menu/xui_menu_fragment_list.xml
+++ b/core/src/main/res/menu/xui_menu_fragment_list.xml
@@ -19,23 +19,9 @@
         app:showAsAction="ifRoom|collapseActionView" />-->
 
     <item
-        android:id="@+id/menu_list_sort"
-        android:icon="@drawable/ic_action_sort"
-        android:orderInCategory="10"
-        android:title="@string/xui_menu_list_sort"
-        app:showAsAction="ifRoom|withText" />
-
-    <item
-        android:id="@+id/menu_list_filter"
-        android:icon="@drawable/ic_action_filter"
-        android:orderInCategory="11"
-        android:title="@string/xui_menu_list_filter"
-        app:showAsAction="ifRoom|withText" />
-
-    <item
         android:id="@+id/menu_list_refresh"
         android:icon="@drawable/ic_action_refresh"
-        android:orderInCategory="12"
+        android:orderInCategory="15"
         android:title="@string/xui_menu_list_refresh"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="never" />
 </menu>
