--- a/app/src/main/res/layout/dialog_ui_fragment.xml
+++ b/app/src/main/res/layout/dialog_ui_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.dialog.DialogUIFragment">
 
     <data>
@@ -29,12 +29,12 @@
 
         <include
             android:id="@+id/custom"
-            bind:clickHandler="@{clickHandler}"
             layout="@layout/custom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            bind:clickHandler="@{clickHandler}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
