--- a/core/src/main/res/drawable/xui_ic_action_add.xml
+++ b/core/src/main/res/drawable/xui_ic_action_add.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:alpha="@integer/icon_alpha"
+    android:alpha="@integer/xui_icon_alpha"
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
