--- a/core/src/main/res/drawable/xui_ic_action_arrow_down.xml
+++ b/core/src/main/res/drawable/xui_ic_action_arrow_down.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/xui_menu_icon_width"
     android:height="@dimen/xui_menu_icon_width"
-    android:alpha="@integer/icon_alpha"
+    android:alpha="@integer/xui_icon_alpha"
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M12,8V4l8,8 -8,8v-4H4V8z" />
+        android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z" />
 </vector>
