--- a/core/src/main/res/drawable/xui_ic_action_sort.xml
+++ b/core/src/main/res/drawable/xui_ic_action_sort.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/xui_menu_icon_width"
     android:height="@dimen/xui_menu_icon_width"
-    android:alpha="@integer/icon_alpha"
+    android:alpha="@integer/xui_icon_alpha"
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M15.41,16.09l-4.58,-4.59 4.58,-4.59L14,5.5l-6,6 6,6z" />
+        android:pathData="M3,18h6v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h12v-2L3,11v2z" />
 </vector>
