--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorTransparent">@android:color/transparent</color>
+    <color name="xui_colorTransparent">@android:color/transparent</color>
 </resources>
