--- a/core/src/main/res/values/integers.xml
+++ b/core/src/main/res/values/integers.xml
@@ -2,5 +2,5 @@
 <resources>
     <integer name="xui_list_item_count">100</integer>
     <integer name="xui_data_table_column_max_lines">1</integer>
-    <item name="icon_alpha" format="float" type="integer">1</item>
+    <item name="xui_icon_alpha" format="float" type="integer">1</item>
 </resources>
